# daily-mcgillis-bot

./: .gitignore  Cargo.toml  image_descriptors.json
editor/: package.json  pnpm-lock.yaml
editor/src/lib/elements/: ImageInput.svelte
editor/src/lib/style/: _reset.scss  index.scss
editor/src/lib/types/: imageDescriptor.ts
editor/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
editor/src/routes/edit/[descriptor_id]/: +page.server.ts  +page.svelte
editor/src/routes/images/[name]/: +server.ts
editor/src/routes/new/: +page.server.ts  +page.svelte
migrations/: 20250717015556_initial.sql  20250718235334_weights.sql
src/: app.rs  error.rs  main.rs
src/bot/: jobs.rs  mod.rs
src/database/: impls.rs  mod.rs  models.rs
src/editor/: handlers.rs  mod.rs  schema.rs
