[package]
name = "daily-mackie-bsky"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = "0.25.4"
bsky-sdk = "0.1.20"
chrono = "0.4.41"
chrono-tz = "0.10.4"
cron-job = "0.2.0"
image = "0.25.6"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
text_io = "0.1.13"
tokio = { version = "1.46.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
