[package]
name = "daily-mackie-bsky"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = "0.25.4"
axum = { version = "0.8.4", features = ["macros"] }
axum_typed_multipart = { version = "0.16.3", features = ["tempfile_3"] }
bsky-sdk = "0.1.20"
chrono = "0.4.41"
chrono-tz = "0.10.4"
cron-job = "0.2.0"
image = "0.25.6"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.20.0"
text_io = "0.1.13"
tokio = { version = "1.46.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
http = "1.2.0"
rustls = "0.23.17"
tower = { version = "0.5.1", features = ["timeout", "util"] }
tower-http = { version = "0.6.1", features = ["add-extension", "cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v6", "v8"] }
turbojpeg = { version = "1.3.3", features = ["image"] }
dotenvy = "0.15.7"
